--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,13 +11,13 @@
     <body>
         <div class="text-center">
             <h1 class="display-4">Welcome</h1>
-            <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+            <p></p>
         </div>
         <!--Grilla + card Inicio-->
         <div class="row row-cols-1 row-cols-md-3 g-4" >
             <div class="col-sm-6 mb-3 mb-sm-0">
                 <div class="card">
-                    <img src="https://i.ytimg.com/vi/yP9eGEgGP7Y/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLC0UidqGuJVNZFq0sX7HyHZxqRiHQ" class="card-img-top" alt="...">
+                    <a asp-area="" asp-controller="Home" asp-action="Synthetik"><img src="/imgs/@ViewBag.Folder/ImgMain1.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <img src="https://i.ytimg.com/vi/yP9eGEgGP7Y/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLC0UidqGuJVNZFq0sX7HyHZxqRiHQ" class="card-img-top" alt="...">
+                    <a asp-area="" asp-controller="Home" asp-action="DevilDaggers"><img src="/imgs/@ViewBag.Folder/ImgMain2.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <img src="https://i.ytimg.com/vi/yP9eGEgGP7Y/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLC0UidqGuJVNZFq0sX7HyHZxqRiHQ" class="card-img-top" alt="...">
+                    <a asp-area="" asp-controller="Home" asp-action="View4"><img src="/imgs/@ViewBag.Folder/ImgMain3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
