--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,10 +23,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="View2">View2</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="View3">View3</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Stores">Stores</a>
                         </li>
                     </ul>
                     <button type="button" class="btn site-theme"><img src="/imgs/luna.png" alt="Tema" id="themeSelector"></button>
@@ -42,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Web PersonalV - <a asp-area="" asp-controller="Home" asp-action="">Totally not an easter egg</a>
+            &copy; 2024 - Web PersonalV - <a asp-area="" asp-controller="Home" asp-action="Minigame">Totally not an easter egg</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
