--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     <body>
         <div class="text-center">
             <h1 class="display-4">Welcome</h1>
-            <p></p>
+            <p>Hola! Bienvenidos a un pequeño proyecto en el que estuve trabajando. Aca quiero dar mis opiniones y recomendar algunos juegos los cuales no son tan conocidos y definitibamente necesitan mas atencion :)</p>
         </div>
         <!--Grilla + card Inicio-->
         <div class="row row-cols-1 row-cols-md-3 g-4" >
@@ -21,6 +21,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -30,6 +31,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -39,6 +41,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
