--- a/Views/Home/SkinSelector.cshtml
+++ b/Views/Home/SkinSelector.cshtml
@@ -28,7 +28,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card text-bg-dark">
-                <img src="..." class="card-img" alt="...">
+                <img src="/imgs/chispop.gif" class="card-img" alt="...">
                 <div class="card-img-overlay">
                     <h5 class="card-title">Card title</h5>
                 </div>
@@ -36,7 +36,7 @@
         </div>
     </div>
     
-    <form method="post" action='@Url.Action("Index", "Home")'>
+    <form method="post" action='@Url.Action("SkinElegida", "Home")'>
         <select class="form-select" size="3" multiple aria-label="Multiple select example" name="SkinSeleccionada">
             <option selected value="normal">Normal</option>
             <option value="pootis">Pootis</option>
