Text.cs almost Finished

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Web PersonalV - <a asp-area="" asp-controller="Home" asp-action="Minigame">Totally not an easter egg</a>
+            &copy; 2024 - Web PersonalV - <a asp-area="" asp-controller="Home" asp-action="SkinSelector">mlem</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
