--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <a asp-area="" asp-controller="Home" asp-action="View4"><img src="/imgs/@ViewBag.Folder/ImgMain3.jpg" class="card-img-top" alt="..."></a>
+                    <a asp-area="" asp-controller="Home" asp-action="ItSteals"><img src="/imgs/@ViewBag.Folder/ImgMain3.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
