--- a/Views/Home/DevilDaggers.cshtml
+++ b/Views/Home/DevilDaggers.cshtml
@@ -13,16 +13,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <iframe width="1100" height="615" src="@ViewBag.Elementos[1]" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="1300" height="715" src="@ViewBag.Elementos[1]" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth1.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgDevilDaggers1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth2.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgDevilDaggers2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth3.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgDevilDaggers3.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -36,10 +36,13 @@
     </div>
     <h2 class="text-center">@ViewBag.Elementos[2]</h2>
     <p class="text-center">@ViewBag.Elementos[3]</p>
+    <img src="/imgs/@ViewBag.Folder/GifDevilDaggers1.gif" class="img-fluid mx-auto d-block" alt="...">
     <h2 class="text-center">@ViewBag.Elementos[4]</h2>
     <p class="text-center">@ViewBag.Elementos[5]</p>
+    <img src="/imgs/@ViewBag.Folder/GifDevilDaggers2.gif" class="img-fluid mx-auto d-block" alt="...">
     <h2 class="text-center">@ViewBag.Elementos[6]</h2>
     <p class="text-center">@ViewBag.Elementos[7]</p>
+    <img src="/imgs/@ViewBag.Folder/GifDevilDaggers3.gif" class="img-fluid mx-auto d-block" alt="...">
     <h2 class="text-center">@ViewBag.Elementos[8]</h2>
     <table class="table table-striped">
         <thead>
@@ -91,5 +94,6 @@
             </tr>
         </tbody>
     </table>
+    <img src="/imgs/@ViewBag.Folder/ImgDevilDaggers4.jpg" class="img-fluid" alt="...">
 </body>
 </html>
