--- a/Views/Home/ItSteals.cshtml
+++ b/Views/Home/ItSteals.cshtml
@@ -42,7 +42,7 @@
     <img src="/imgs/@ViewBag.Folder/GifItSteals2.gif" class="img-fluid mx-auto d-block" alt="...">
     <h2 class="text-center">@ViewBag.Elementos[6]</h2>
     <p class="text-center container">@ViewBag.Elementos[7]</p>
-    <img src="/imgs/@ViewBag.Folder/ImgItSteals4.jpg" class="img-fluid mx-auto d-block" alt="..."> <!--Need to make them myself-->
+    <img src="/imgs/@ViewBag.Folder/GifItSteals3.gif" class="img-fluid mx-auto d-block" alt="..."> <!--Need to make them myself-->
     <h2 class="text-center">@ViewBag.Elementos[8]</h2>
     <table class="table table-striped">
         <thead>
