Puse algunas cosas mal lmao

--- a/Views/Home/SkinSelector.cshtml
+++ b/Views/Home/SkinSelector.cshtml
@@ -30,7 +30,7 @@
             <div class="card text-bg-dark">
                 <img src="/imgs/chispop.gif" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Chispop</h5>
                 </div>
             </div>
         </div>
