Se me acabaron las ideas

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" >
             <div class="col-sm-6 mb-3 mb-sm-0">
                 <div class="card">
-                    <a asp-area="" asp-controller="Home" asp-action="Synthetik"><img src="/imgs/@ViewBag.Folder/ImgMain1.jpg" class="card-img-top" alt="..."></a>
+                    <a asp-area="" asp-controller="Home" asp-action="Synthetik"><img src="/imgs/@ViewBag.Folder/ImgMain1.jpg" class="card-img-top" alt="ImgMain1"></a>
                     <div class="card-body">
                         <h5 class="card-title">@ViewBag.Elementos[2]</h5>
                         <p class="card-text">@ViewBag.Elementos[3]</p>
@@ -27,7 +27,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <a asp-area="" asp-controller="Home" asp-action="DevilDaggers"><img src="/imgs/@ViewBag.Folder/ImgMain2.jpg" class="card-img-top" alt="..."></a>
+                    <a asp-area="" asp-controller="Home" asp-action="DevilDaggers"><img src="/imgs/@ViewBag.Folder/ImgMain2.jpg" class="card-img-top" alt="ImgMain2"></a>
                     <div class="card-body">
                         <h5 class="card-title">@ViewBag.Elementos[5]</h5>
                         <p class="card-text">@ViewBag.Elementos[6]</p>
@@ -37,7 +37,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <a asp-area="" asp-controller="Home" asp-action="ItSteals"><img src="/imgs/@ViewBag.Folder/ImgMain3.jpg" class="card-img-top" alt="..."></a>
+                    <a asp-area="" asp-controller="Home" asp-action="ItSteals"><img src="/imgs/@ViewBag.Folder/ImgMain3.jpg" class="card-img-top" alt="ImgMain3"></a>
                     <div class="card-body">
                         <h5 class="card-title">@ViewBag.Elementos[8]</h5>
                         <p class="card-text">@ViewBag.Elementos[9]</p>
