--- a/Views/Home/SkinSelector.cshtml
+++ b/Views/Home/SkinSelector.cshtml
@@ -12,7 +12,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4" >
         <div class="col-sm-6 mb-3 mb-sm-0">
             <div class="card text-bg-dark">
-                <img src="/imgs/normal.jpg" class="card-img" alt="...">
+                <img src="/imgs/normal.jpg" class="card-img" alt="The actual website">
                 <div class="card-img-overlay">
                     <h5 class="card-title" style="color: black">Normal</h5>
                 </div>
@@ -20,7 +20,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card text-bg-dark">
-                <img src="/imgs/pootis.gif" class="card-img" alt="...">
+                <img src="/imgs/pootis.gif" class="card-img" alt="Heavy TF2">
                 <div class="card-img-overlay">
                     <h5 class="card-title">Pootis</h5>
                 </div>
@@ -28,9 +28,9 @@
         </div>
         <div class="col-sm-6">
             <div class="card text-bg-dark">
-                <img src="/imgs/chispop.gif" class="card-img" alt="...">
+                <img src="/imgs/chispop.gif" class="card-img" alt="Shitpost">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Chispop</h5>
                 </div>
             </div>
         </div>
