--- a/Views/Home/Stores.cshtml
+++ b/Views/Home/Stores.cshtml
@@ -24,7 +24,7 @@
                 <th scope="row">1</th>
                 <td class="text-center">
                     @ViewBag.Elementos[5]
-                    <img src="/imgs/@ViewBag.Folder/ImgStores1.png" alt="">
+                    <img src="/imgs/@ViewBag.Folder/ImgStores1.png" alt="ImgStores1">
                 </td>
                 <td>
                     @ViewBag.Elementos[6]
@@ -38,7 +38,7 @@
                 <th scope="row">2</th>
                 <td class="text-center">
                     @ViewBag.Elementos[11]
-                    <img src="/imgs/@ViewBag.Folder/ImgStores2.png" alt="">
+                    <img src="/imgs/@ViewBag.Folder/ImgStores2.png" alt="ImgStores2">
                 </td>
                 <td>
                     @ViewBag.Elementos[12]
@@ -54,7 +54,7 @@
                 <th scope="row">3</th>
                 <td class="text-center">
                     @ViewBag.Elementos[19]
-                    <img src="/imgs/@ViewBag.Folder/ImgStores3.png" alt="">
+                    <img src="/imgs/@ViewBag.Folder/ImgStores3.png" alt="ImgStores3">
                 </td>
                 <td>
                     @ViewBag.Elementos[20]
@@ -68,7 +68,7 @@
                 <th scope="row">4</th>
                 <td class="text-center">
                     @ViewBag.Elementos[25]
-                    <img src="/imgs/@ViewBag.Folder/ImgStores4.png" alt="">
+                    <img src="/imgs/@ViewBag.Folder/ImgStores4.png" alt="ImgStores4">
                 </td>
                 <td>
                     @ViewBag.Elementos[26]
