--- a/Views/Home/ItSteals.cshtml
+++ b/Views/Home/ItSteals.cshtml
@@ -16,13 +16,13 @@
                 <iframe width="1100" height="615" src="@ViewBag.Elementos[1]" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgItSteals1.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgItSteals1.jpg" class="d-block w-100" alt="ImgItSteals1">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgItSteals2.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgItSteals2.jpg" class="d-block w-100" alt="ImgItSteals2">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgItSteals3.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgItSteals3.jpg" class="d-block w-100" alt="ImgItSteals3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -36,13 +36,13 @@
     </div>
     <h2 class="text-center">@ViewBag.Elementos[2]</h2>
     <p class="text-center container">@ViewBag.Elementos[3]</p>
-    <img src="/imgs/@ViewBag.Folder/GifItSteals1.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifItSteals1.gif" class="img-fluid mx-auto d-block" alt="GifItSteals1">
     <h2 class="text-center">@ViewBag.Elementos[4]</h2>
     <p class="text-center container">@ViewBag.Elementos[5]</p>
-    <img src="/imgs/@ViewBag.Folder/GifItSteals2.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifItSteals2.gif" class="img-fluid mx-auto d-block" alt="GifItSteals2">
     <h2 class="text-center">@ViewBag.Elementos[6]</h2>
     <p class="text-center container">@ViewBag.Elementos[7]</p>
-    <img src="/imgs/@ViewBag.Folder/GifItSteals3.gif" class="img-fluid mx-auto d-block" alt="..."> <!--Need to make them myself-->
+    <img src="/imgs/@ViewBag.Folder/GifItSteals3.gif" class="img-fluid mx-auto d-block" alt="GifItSteals3"> <!--Need to make them myself-->
     <h2 class="text-center">@ViewBag.Elementos[8]</h2>
     <table class="table table-striped">
         <thead>
@@ -94,6 +94,6 @@
             </tr>
         </tbody>
     </table>
-    <img src="/imgs/@ViewBag.Folder/ImgItSteals5.jpg" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/ImgItSteals5.jpg" class="img-fluid mx-auto d-block" alt="ImgItSteals5">
 </body>
 </html>
