--- a/Views/Home/Synthetik.cshtml
+++ b/Views/Home/Synthetik.cshtml
@@ -16,13 +16,13 @@
                 <iframe width="1100" height="615" src="@ViewBag.Elementos[1]" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth1.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgSynth1.jpg" class="d-block w-100" alt="ImgSynth1">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth2.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgSynth2.jpg" class="d-block w-100" alt="ImgSynth2">
             </div>
             <div class="carousel-item">
-                <img src="/imgs/@ViewBag.Folder/ImgSynth3.jpg" class="d-block w-100" alt="...">
+                <img src="/imgs/@ViewBag.Folder/ImgSynth3.jpg" class="d-block w-100" alt="ImgSynth3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -36,13 +36,13 @@
     </div>
     <h2 class="text-center">@ViewBag.Elementos[2]</h2>
     <p class="text-center container">@ViewBag.Elementos[3]</p>
-    <img src="/imgs/@ViewBag.Folder/GifSynth1.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifSynth1.gif" class="img-fluid mx-auto d-block" alt="GifSynth1">
     <h2 class="text-center">@ViewBag.Elementos[4]</h2>
     <p class="text-center container">@ViewBag.Elementos[5]</p>
-    <img src="/imgs/@ViewBag.Folder/GifSynth2.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifSynth2.gif" class="img-fluid mx-auto d-block" alt="GifSynth2">
     <h2 class="text-center">@ViewBag.Elementos[6]</h2>
     <p class="text-center container">@ViewBag.Elementos[7]</p>
-    <img src="/imgs/@ViewBag.Folder/GifSynth3.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifSynth3.gif" class="img-fluid mx-auto d-block" alt="GifSynth3">
     <h2 class="text-center">@ViewBag.Elementos[8]</h2>
     <table class="table table-striped">
         <thead>
@@ -94,6 +94,6 @@
             </tr>
         </tbody>
     </table>
-    <img src="/imgs/@ViewBag.Folder/GifSynth4.gif" class="img-fluid mx-auto d-block" alt="...">
+    <img src="/imgs/@ViewBag.Folder/GifSynth4.gif" class="img-fluid mx-auto d-block" alt="GifSynth4">
 </body>
 </html>
